RESOLVED FIXED272320
OffscreenCanvas fails to render to placeholder with nested workers
https://bugs.webkit.org/show_bug.cgi?id=272320
Summary OffscreenCanvas fails to render to placeholder with nested workers
Kimmo Kinnunen
Reported 2024-04-08 04:11:31 PDT
OffscreenCanvas fails to render to placeholder with nested workers
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-08 04:11:46 PDT
Kimmo Kinnunen
Comment 2 2024-04-08 04:24:02 PDT
EWS
Comment 3 2024-04-10 15:19:05 PDT
Committed 277328@main (41096f3920bd): <https://commits.webkit.org/277328@main> Reviewed commits have been landed. Closing PR #26968 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.